commit_Creacion_registro_login_funcinando_16_03_2023

--- a/app-tienda/styles/globals.css
+++ b/app-tienda/styles/globals.css
@@ -5,13 +5,14 @@
 h1 {
   color: red
 }
+
 header {
   height: 70px;
   /* background-color: blue; */
 }
 
 main{
-  
+  background-image: url('/public/Fotohome.png');
   height: auto;
   background-color: azure;
 }
